medicine_func
